plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.9-SNAPSHOT'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'finance-backend'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // MongoDB (추가)
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Redis (추가)
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    implementation 'org.springframework.session:spring-session-data-mongodb'
    implementation 'org.springframework.session:spring-session-data-redis'

    // ✅ Spring Security (신규 추가)
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // ✅ JWT (신규 추가)
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    // ⭐ SpringDoc OpenAPI (Swagger) - 신규 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'


    // AWS SDK ✅ (수동 추가)
    // AWS SDK - BOM 방식 (변수 사용 안 함)
    implementation platform('software.amazon.awssdk:bom:2.28.11')
    implementation 'software.amazon.awssdk:s3'
    implementation 'software.amazon.awssdk:sqs'
    // AWS SDK v2

    // Excel 처리 (추가)
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

    // 한국어 형태소 분석 (Open Korean Text / Okt)
    implementation 'org.openkoreantext:open-korean-text:2.3.1'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()

    jvmArgs("-XX:+EnableDynamicAgentLoading")
    // open-korean-text 사전 로딩에 충분한 힙 메모리 할당
    maxHeapSize = '1g'
}
